[gd_scene load_steps=26 format=2]

[ext_resource path="res://characters/player/player.gd" type="Script" id=1]
[ext_resource path="res://characters/player/health.tres" type="Resource" id=2]
[ext_resource path="res://effects/BloodParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/player/score.tres" type="Resource" id=4]
[ext_resource path="res://characters/player/states/fireball_state.gd" type="Script" id=5]
[ext_resource path="res://characters/player/states/levitate_state.gd" type="Script" id=6]
[ext_resource path="res://characters/player/states/shrink_state.gd" type="Script" id=7]
[ext_resource path="res://assets/player_hurt.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/fireball_shoot.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/player.png" type="Texture" id=10]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment(){
	vec4 prevColor =  texture(TEXTURE, UV);
	if (active) COLOR = vec4(1.0, 1.0, 1.0, prevColor.a);
	else COLOR = prevColor;
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/active = false

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 0.355469, 0.355469, 0.355469, 0.788235 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
min_value = 0.5
max_value = 2.0
_data = [ Vector2( 0, 0.5 ), 0.0, 0.0, 0, 0, Vector2( 0.994382, 1.97784 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.6
trail_divisor = 10
emission_shape = 5
emission_ring_radius = 8.29
emission_ring_inner_radius = 0.53
emission_ring_height = 6.12
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
spread = 11.14
flatness = 0.25
gravity = Vector3( 0, 0, 0 )
initial_velocity = 84.08
initial_velocity_random = 0.3
angular_velocity = 142.57
angular_velocity_random = 0.45
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 30.4
angle_random = 0.81
scale = 2.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0.174194, 1 )
colors = PoolColorArray( 0, 0.0101562, 0.547363, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=13]
max_value = 2.0
_data = [ Vector2( 0, 1.98409 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
lifetime_randomness = 0.36
trail_divisor = 10
flag_disable_z = true
spread = 7.12
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 287.12
initial_velocity_random = 0.25
angular_velocity = 199.6
angular_velocity_random = 0.42
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 25.74
damping_random = 0.25
scale = 2.0
scale_random = 0.46
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )

[sub_resource type="Animation" id=8]
resource_name = "End"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1.5, 1.5, 1.5, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1.5, 1.5, 1.5, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 54
script = ExtResource( 1 )
score = ExtResource( 4 )
health = ExtResource( 2 )

[node name="CollisionBody" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.200001, -0.200001 )
scale = Vector2( 1.00781, 1.00781 )
polygon = PoolVector2Array( -16, -16, 16, -16, 16, 16, -16, 16 )

[node name="LevitateRay" type="RayCast2D" parent="."]
position = Vector2( 16, 18 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 300 )
collision_mask = 2

[node name="ShrinkRay" type="RayCast2D" parent="."]
position = Vector2( 16, 18 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 300 )
collision_mask = 4

[node name="Body" type="Polygon2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
material = SubResource( 7 )
antialiased = true
texture = ExtResource( 10 )
polygon = PoolVector2Array( -16, -16, 16, -16, 16, 16, -16, 16 )
uv = PoolVector2Array( -5.72205e-06, 32, 4.76837e-06, -3.8147e-06, 32, 2.86102e-06, 32, 32 )

[node name="Wand" type="Polygon2D" parent="Body"]
position = Vector2( -2, -2 )
color = Color( 0.415686, 0.270588, 0, 1 )
polygon = PoolVector2Array( -7, 18, -7, 23, 16, 21, 16, 20 )

[node name="ShootPoint" type="Position2D" parent="Body/Wand"]
position = Vector2( 16, 20 )

[node name="LevitateParticles" type="Particles2D" parent="Body/Wand"]
position = Vector2( 16, 20 )
emitting = false
amount = 1000
lifetime = 3.0
speed_scale = 5.11
visibility_rect = Rect2( -22, -46.313, 271.513, 85.2066 )
local_coords = false
process_material = SubResource( 5 )

[node name="ShrinkingParticles" type="Particles2D" parent="Body/Wand"]
position = Vector2( 17, 20 )
emitting = false
amount = 500
lifetime = 2.0
visibility_rect = Rect2( 0, -27.7123, 273.92, 59.1896 )
process_material = SubResource( 15 )

[node name="BlinkingPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/End = SubResource( 8 )
anims/RESET = SubResource( 10 )
anims/Start = SubResource( 9 )

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="BloodParticles" parent="." instance=ExtResource( 3 )]
position = Vector2( 16, 16 )
emitting = false
one_shot = true

[node name="SpellTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="States" type="Node" parent="."]
unique_name_in_owner = true

[node name="FireBall" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Levitate" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Shrink" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="FireBallShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="Listener2D" type="Listener2D" parent="."]
current = true

[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
[connection signal="timeout" from="SpellTimer" to="." method="_on_SpellTimer_timeout"]
[connection signal="timeout" from="DodgeTimer" to="." method="_on_DodgeTimer_timeout"]
